@@ -259,19 +259,19 @@ public class EventStreamReaderTest {
         ByteBuffer buffer3 = writeInt(stream, 3);
         EventRead<byte[]> e = reader.readNextEvent(0);
         assertEquals(buffer1, ByteBuffer.wrap(e.getEvent()));
-        assertEquals(new Long(WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES),
+        assertEquals(Long.valueOf(WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES),
                 e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         e = reader.readNextEvent(0);
         assertEquals(buffer2, ByteBuffer.wrap(e.getEvent()));
-        assertEquals(new Long(2 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
+        assertEquals(Long.valueOf(2 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
                 e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         e = reader.readNextEvent(0);
         assertEquals(buffer3, ByteBuffer.wrap(e.getEvent()));
-        assertEquals(new Long(3 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
+        assertEquals(Long.valueOf(3 * (WireCommands.TYPE_PLUS_LENGTH_SIZE + Integer.BYTES)),
                 e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         e = reader.readNextEvent(0);
         assertNull(e.getEvent());
-        assertEquals(new Long(-1), e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
+        assertEquals(Long.valueOf(-1), e.getPosition().asImpl().getOffsetForOwnedSegment(Segment.fromScopedName("Foo/Bar/0")));
         reader.close();
     }
 
